# chessGame

./: .gitignore  CMakeLists.txt  README.md
include/: Board.h  Game.h  Square.h  moveValidator.h
include/enums/: Color.h  Piece.h
src/: Game.cpp  board.cpp  main.cpp  moveValidator.cpp
